# nonebot-plugin-template

./: .gitignore  .pre-commit-config.yaml  .templatesyncignore  README.md  cliff.toml  justfile  pyproject.toml  readme_template.md
.github/: .templatesyncignore  release-drafter.yml
.github/workflows/: ci.yml  initialize.yml  release-draft.yml  release.yml  rename.yml  template-sync.yml
src/nonebot_plugin_template/: __init__.py
tests/: plugin_test.py
tests/integration/: example_test.py
tests/units/: plugin_test.py
