[project]
name = "nonebot-plugin-template"
version = "0.1.0"
description = "插件描述"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "owner", email = "owner@gmail.com" }]
dependencies = [
  # "httpx>=0.27.0,<1.0.0",
  # "nonebot-plugin-alconna>=0.60.0,<1.0.0",    # 跨平台命令解析拓展
  # "nonebot-plugin-apscheduler>=0.5.0,<1.0.0", # 定时任务
  # "nonebot-plugin-localstore>=0.7.4,<1.0.0",  # 存储文件
  # "nonebot-plugin-uninfo>=0.10.0,<1.0.0",     # 多平台用户信息获取
  # "nonebot-adapter-onebot>=2.4.6,<3.0.0",
  "nonebot2>=2.4.3,<3.0.0",

]

[project.urls]
Homepage = "https://github.com/owner/nonebot-plugin-template"
Issues = "https://github.com/owner/nonebot-plugin-template/issues"
Repository = "https://github.com/owner/nonebot-plugin-template.git"

[dependency-groups]
dev = [
  "basedpyright>=1.16.0",
  "commitizen>=4.1.0",
  "git-cliff>=2.11.0,<3.0.0",
  "prek>=0.2.0",
  "ruff>=0.14.8,<1.0.0",
  { include-group = "test" },
]
test = [
  "nonebot-adapter-onebot>=2.4.6,<3.0.0",
  "nonebot2[fastapi]>=2.4.3,<3.0.0",
  "nonebug>=0.4.3,<1.0.0",
  "pytest-asyncio>=1.3.0,<1.4.0",
  "pytest-cov>=7.0.0",
  "pytest-xdist>=3.8.0,<4.0.0",
]

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"
version_files = ["pyproject.toml:^version"]
major_version_zero = true                   # 允许 0.x.x 版本号

[tool.coverage.report]
exclude_lines = [
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "@overload",
  "except ImportError:",
]

[tool.nonebot]
plugins = ["nonebot_plugin_template"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.10"
pythonPlatform = "All"
typeCheckingMode = "standard"

[[tool.pyright.executionEnvironments]]
root = "tests"
reportPrivateUsage = "none"      # 允许测试访问私有属性 (_variable)
reportUnknownMemberType = "none" # 允许 Mock 对象等动态类型

[tool.pytest]
addopts = [
  "--import-mode=importlib", # 导入模式（import mode）
  "--strict-markers",        # 严格标记模式（strict markers mode）
  "--tb=short",              # 简短的错误回溯（short traceback）
  "-ra",                     # 显示所有测试结果摘要（show all test results summary）
]
pythonpath = ["src", "tests"]  # 确保 tests 目录被识别为包
asyncio_mode = "auto" # 自动检测异步测试
asyncio_default_fixture_loop_scope = "function" # 异步 fixture 的事件循环作用域

[tool.ruff]
line-length = 88
src = ["src", "tests"]  # 源代码目录（自动识别其中的模块为本地模块）

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint]
select = [
  "F",     # Pyflakes（Pyflakes 基础检查）
  "W",     # pycodestyle warnings（pycodestyle 警告）
  "E",     # pycodestyle errors（pycodestyle 错误）
  "I",     # isort（导入排序）
  "B",     # flake8-bugbear (发现潜在 bug)
  "UP",    # pyupgrade（Python 版本升级语法）
  "ASYNC", # flake8-async（异步代码检查）
  "C4",    # flake8-comprehensions（推导式优化）
  "T10",   # flake8-debugger（调试器检查）
  "T20",   # flake8-print（print 语句检查）
  "PYI",   # flake8-pyi（类型存根文件检查）
  "PT",    # flake8-pytest-style（pytest 风格检查）
  "Q",     # flake8-quotes（引号风格检查）
  "TID",   # flake8-tidy-imports（导入整理）
  "RUF",   # Ruff-specific rules（Ruff 特定规则）
]
ignore = [
  "E402",   # module-import-not-at-top-of-file（模块导入不在文件顶部）
  "UP037",  # quoted-annotation（引号类型注解）
  "RUF001", # ambiguous-unicode-character-string（字符串中的歧义 Unicode 字符）
  "RUF002", # ambiguous-unicode-character-docstring（文档字符串中的歧义 Unicode 字符）
  "RUF003", # ambiguous-unicode-character-comment（注释中的歧义 Unicode 字符）
  "W191",   # indentation contains tabs（缩进包含制表符）
  "TID252", # relative-import（相对导入）
]

[tool.ruff.lint.isort]
length-sort = true                             # 按长度排序导入
extra-standard-library = ["typing_extensions"] # 额外的标准库模块

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true # 保留运行时类型
